infrastructure/network/base/gateway-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    name: gateway
